fix: widget button is now visible on edit mode; #1

--- a/client/src/app/pages/board/board.component.scss
+++ b/client/src/app/pages/board/board.component.scss
@@ -33,11 +33,13 @@
   top: 16px;
   left: 50%;
   transform: translate(-50%, 0);
+  visibility: hidden;
   opacity: 0;
   transition: .4s;
 
   // Edit mode
   .jgb-edit & {
+    visibility: visible;
     opacity: 1;
   }
 }
